2009-03-31  Thomas Cataldo  <thomas.cataldo@aliasource.fr>

	prepare allocation of sync keys in statemachine
	
	* plugins/org.obm.push.backend.obm22/src/org/obm/push/backend/obm22
	/OBMBackend.java: (OBMBackend.waitForChanges):
	* plugins/org.obm.push/src/org/obm/push/backend/IBackend.java:
	(IBackend):
	* plugins/org.obm.push/src/org/obm/push/impl/FolderSyncHandler.java
	: (FolderSyncHandler.process):
	* plugins/org.obm.push/src/org/obm/push/impl/SyncHandler.java:
	(SyncHandler.process), (SyncHandler), (SyncHandler.doUpdates),
	(SyncHandler.doFetch):
	* plugins/org.obm.push/src/org/obm/push/state/StateMachine.java:
	(StateMachine.allocateNewSyncKey), (StateMachine):

2009-03-31  Thomas Cataldo  <thomas.cataldo@aliasource.fr>

	Calendar sync improvements for win mobile (attendees crashe active
	sync client).

	use windows domain as obm domain if no "@" in login. Fixes active
	sync desktop client.
	
	* plugins/org.obm.push.backend.obm22/src/org/obm/push/backend/obm22
	/ContentsExporter.java: (ContentsExporter.getContactsChanges),
	(ContentsExporter.getTasksChanges),
	(ContentsExporter.getCalendarChanges),
	(ContentsExporter.getMailChanges), (ContentsExporter),
	(ContentsExporter.getChanged), (ContentsExporter.getCount),
	(ContentsExporter.fetch):
	* plugins/org.obm.push.backend.obm22/src/org/obm/push/backend/obm22
	/ContentsImporter.java: (ContentsImporter.importMessageChange),
	(ContentsImporter.importMessageDeletion):
	* plugins/org.obm.push.backend.obm22/src/org/obm/push/backend/obm22
	/OBMBackend.java: (OBMBackend), (OBMBackend.OBMBackend),
	(OBMBackend.waitForChanges):
	* plugins/org.obm.push.backend.obm22/src/org/obm/push/backend/obm22
	/calendar/CalendarBackend.java: (CalendarBackend),
	(CalendarBackend.getClient), (CalendarBackend.locateObmSync),
	(CalendarBackend.getHierarchyChanges),
	(CalendarBackend.getContentChanges):
	* plugins/org.obm.push.backend.obm22/src/org/obm/push/backend/obm22
	/calendar/EventConverter.java: (EventConverter.convertEvent),